Fix wrong spinner position on mobile Chrome

--- a/style.css
+++ b/style.css
@@ -51,6 +51,7 @@ body {
 }
 
 #spinner {
+  width: 1.5rem;
   height: 1.5rem;
   animation: 1s infinite steps(6) spin;
 }
